will take input and output the count

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-
+    <H1>Ping-Pong!</h1>
+    <form id="num-form">
+        <input type="text" name="tbox" id="tbox" placeholder="What number would you like to count to?">
+        <button type="submit" id="submit">Count!</button>
+    </form>
+    <div id="output">
+    </div>
 </body>
 
 </html>
