adds count to list elemet, only counts to the number specified

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
     <H1>Ping-Pong!</h1>
     <form id="num-form">
-        <input type="text" name="tbox" id="tbox" placeholder="What number would you like to count to?">
+        <label for="tbox">Enter a number</label>
+        <input id="tbox" type="number" placeholder="What number would you like to count to?">
         <button type="submit" id="submit">Count!</button>
     </form>
-    <div id="output">
-    </div>
+    <ul id="output">
+    </ul>
 </body>
 
 </html>
