add CSS background color and horizontal line

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <H1>Ping-Pong!</h1>
+    <h1 class="jumbotron">Ping-Pong!</h1>
     <form id="num-form">
         <label for="tbox">Enter a number</label>
-        <input id="tbox" type="number" placeholder="What number would you like to count to?">
+        <input id="tbox" type="number" placeholder="Enter a number">
         <button type="submit" id="submit">Count!</button>
     </form>
+    <hr>
     <ul id="output">
     </ul>
 </body>
