add img folder, add image and CSS styling to page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <form id="num-form">
         <label for="tbox">Enter a number</label>
         <input id="tbox" type="number" placeholder="Enter a number">
-        <button type="submit" id="submit">Count!</button>
+        <button type="submit" id="submit">Play</button>
     </form>
     <hr>
+    <img src="img/crossed-paddles.png" alt="crossed ping pong paddles">
     <ul id="output">
     </ul>
 </body>
