--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 
 <body>
     <h1 class="jumbotron">Ping-Pong!</h1>
+    <img src="img/single-paddle-with-ball.png" alt="single paddle" id="paddle-ball">
+    <br>
+    <br>
+    <br>
+    <br>
     <form id="num-form">
         <label for="tbox">Enter a number</label>
         <input id="tbox" type="number" placeholder="Enter a number">
         <button type="submit" id="submit">Play</button>
     </form>
     <hr>
-    <img src="img/crossed-paddles.png" alt="crossed ping pong paddles">
+    <img src="img/single-paddle-with-ball.png" alt="single paddle" id="paddle">
     <ul id="output">
     </ul>
 </body>
